--- a/OXG.LinkCutter/Views/Home/CutLink.cshtml
+++ b/OXG.LinkCutter/Views/Home/CutLink.cshtml
@@ -1,7 +1,20 @@
-﻿
+﻿@model OXG.LinkCutter.Models.Link
 @{
-    ViewData["Title"] = "CutLink";
+    ViewData["Title"] = "Magic!";
 }
 
-<h1>CutLink</h1>
-
+<div class="jumbotron text-center">
+    <h1 class="display-3">Готово!</h1>
+    <p class="lead">Сокращённая ссылка находится в поле ниже</p>
+    <hr class="my-4">
+    <form asp-action="CutLink" method="post">
+        <div class="form-group">
+            <div class="container-fluid">
+                <input name="originalLink" type="url" class="form-control-lg" id="inputLink" value="@Environment.GetEnvironmentVariable("BaseURL")/Redirect/Redirect/@Model.CuttedLink" >
+            </div>
+        </div>
+        <p class="lead">
+            @*<input class="btn btn-primary btn-lg" type="submit" name="name" value="CUT!" />*@
+        </p>
+    </form>
+</div>
