Добавлена система авторизации и аутентификации. Добавлена страница просмотра своих ссылок

--- a/OXG.LinkCutter/Views/Home/CutLink.cshtml
+++ b/OXG.LinkCutter/Views/Home/CutLink.cshtml
@@ -10,7 +10,7 @@
     <form asp-action="CutLink" method="post">
         <div class="form-group">
             <div class="container-fluid">
-                <input name="originalLink" type="url" class="form-control-lg" id="inputLink" value="@Environment.GetEnvironmentVariable("BaseURL")/Redirect/Redirect/@Model.CuttedLink" >
+                <input name="originalLink" type="url" class="form-control-lg" id="inputLink" value="@Environment.GetEnvironmentVariable("BaseURL")/Redirect/Rdrc/@Model.CuttedLink" >
             </div>
         </div>
         <p class="lead">
