--- a/OXG.LinkCutter/Views/Account/Index.cshtml
+++ b/OXG.LinkCutter/Views/Account/Index.cshtml
@@ -16,12 +16,13 @@
         <tbody>
             @foreach (var item in Model)
             {
-                <tr>
-                    <th scope="row">@item.Id</th>
-                    <td>@(Environment.GetEnvironmentVariable("BaseURL"))/Redirect/Rdrc/@item.CuttedLink</td>
-                    <td>@item.OriginalLink</td>
-                    <td>@item.User.Email</td>
-                </tr>
+            <tr>
+                <th scope="row">@item.Id</th>
+                <td>@(Environment.GetEnvironmentVariable("BaseURL"))/Redirect/Rdrc/@item.CuttedLink</td>
+                <td>@item.OriginalLink</td>
+                <td>@item.User.Email</td>
+                <td><a asp-action="RemoveLink" asp-controller="Home" asp-route-id="@item.Id" class="btn btn-danger">Удалить</a></td>
+            </tr>
             }
         </tbody>
     </table>
